--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -10,6 +10,7 @@
 			android:isGame="true"
 			android:appCategory="game"
         	android:label="@string/app_name"
+		    android:screenOrientation="landscape"
         	tools:ignore="UnusedAttribute"
 			android:theme="@style/GdxTheme">
 		<activity
