--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,12 @@ buildscript {
 		google()
 		gradlePluginPortal()
 		maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+		maven { url "https://oss.sonatype.org/content/repositories/releases/" }
 	}
 	dependencies {
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 		classpath "com.android.tools.build:gradle:$androidPluginVersion"
+		classpath "com.badlogicgames.gdx:gdx-ai:1.8.1"
 	}
 }
 
