--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,4 +5,5 @@ dependencies {
 	api "com.badlogicgames.gdx:gdx:$gdxVersion"
 	api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 	api "com.badlogicgames.ashley:ashley:$ashleyVersion"
+	implementation "com.badlogicgames.gdx:gdx-ai:1.8.1"
 }
