--- a/android/build.gradle
+++ b/android/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 	natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
 	natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
 
-	compile "com.badlogicgames.gdx:gdx-ai:1.8.1"
+	implementation "com.badlogicgames.gdx:gdx-ai:1.8.1"
 
 }
 
