--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 		classpath "com.android.tools.build:gradle:$androidPluginVersion"
 		classpath "com.badlogicgames.gdx:gdx-ai:1.8.1"
+		classpath "com.badlogicgames.ashley:ashley:1.7.3"
 	}
 }
 
