--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,4 +6,5 @@ dependencies {
 	api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 	api "com.badlogicgames.ashley:ashley:$ashleyVersion"
 	implementation "com.badlogicgames.gdx:gdx-ai:1.8.1"
+	implementation "com.badlogicgames.ashley:ashley:1.7.3"
 }
