--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 		classpath "com.android.tools.build:gradle:$androidPluginVersion"
 		classpath "com.badlogicgames.gdx:gdx-ai:1.8.1"
 		classpath "com.badlogicgames.ashley:ashley:1.7.3"
+		classpath "com.github.czyzby:noise4j:0.1.0"
 	}
 }
 
