--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,4 +7,5 @@ dependencies {
 	api "com.badlogicgames.ashley:ashley:$ashleyVersion"
 	implementation "com.badlogicgames.gdx:gdx-ai:1.8.1"
 	implementation "com.badlogicgames.ashley:ashley:1.7.3"
+	implementation 'com.github.czyzby:noise4j:0.1.0'
 }
